# iot-project

./: README.md  README.pt-br.md  docker-compose.yml  project.excalidraw
api/: Cargo.toml  Dockerfile  build.rs  test  test1
api/protos/: server.proto
api/src/: main.rs
api/src/infra/: mod.rs  timeseries.rs  tms_connection.rs
api/src/services/: data.rs  mod.rs  service.rs
bridge/: .env  Cargo.toml  Dockerfile
bridge/src/: main.rs
bridge/src/infra/: mod.rs  mqtt_connnection.rs  rabbitmq_connection.rs  s_messaging.rs  source_messaging.rs  target_messaging.rs
bridge/src/services/: bridge.rs  data_convert.rs  mod.rs  serializer.rs
bridge/src/services_/: bridge.rs  data_convert.rs  mod.rs
historian/: Cargo.toml  Dockerfile
historian/src/: main.rs
historian/src/infra/: consumer.rs  mod.rs  rabbitmq_connection.rs  rmq_connection.rs  timeseries.rs  tms_connnection.rs
historian/src/services/: consumer.rs  data_convert.rs  mod.rs  serializer.rs
sensor-simulator/: .eslintrc.json  Dockerfile  package.json  tsconfig.json
sensor-simulator/config/: default.json
sensor-simulator/src/: main.ts
sensor-simulator/src/entities/: algorithm_data.ts  healthy_data.ts  service.ts  status.ts
sensor-simulator/src/impl/infra/: mqtt_messaging.ts  random_generator.ts
sensor-simulator/src/impl/services/: healthy.ts  humidity.ts  temperature.ts
sensor-simulator/src/infra/: generator.ts  messaging.ts
sensor-simulator/src/infra/impl/: mqtt_messaging.ts  random_generator.ts
sensor-simulator/src/interfaces/infra/: generator.ts  messaging.ts
sensor-simulator/src/interfaces/services/: algorithm.ts  data.ts  healthy.ts
sensor-simulator/src/services/: service.ts  status.ts
sensor-simulator/src/utils/: logger.ts
(+3 files in other folders)
