[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = { version = "0.15.7" }
env_logger = { version = "0.11.0" }
log = { version = "0.4.20" }
tonic = "0.11.0"
prost = "0.12.3"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
async-trait = { version = "0.1.77" }
aws-config = { version = "1.1.5", features = ["behavior-version-latest"] }
aws-sdk-timestreamquery = "1.13.0"
serde_json = "1.0.113"

[build-dependencies]
tonic-build = { version = "0.11.0" }
