[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
async-trait = { version = "0.1.77" }
dotenvy = { version = "0.15.7" }
env_logger = { version = "0.11.0" }
log = { version = "0.4.20" }
futures-util = { version = "0.3.30" }
paho-mqtt = { version = "0.12.3" }
lapin = { version = "2.3.1" }
